[gd_scene load_steps=6 format=3 uid="uid://bqj8gj421nqnv"]

[ext_resource type="Script" path="res://level/title/level_select.gd" id="1_itmiu"]
[ext_resource type="Texture2D" uid="uid://ehuao4drpg6j" path="res://assets/texture/world/images/choose_level_button.png" id="2_6y3xj"]
[ext_resource type="Texture2D" uid="uid://cynu461osxpsi" path="res://assets/texture/world/images/level1_button.png" id="3_8l7ta"]
[ext_resource type="Texture2D" uid="uid://ujywbmb6t86g" path="res://assets/texture/world/images/level2_button.png" id="4_oqde7"]
[ext_resource type="AudioStream" uid="uid://dyfwnpdvhjry2" path="res://assets/audio/music/Laughing Baby Bubbling Remix.mp3" id="5_x0mif"]

[node name="level_select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_itmiu")

[node name="choose_level" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -203.0
offset_right = 203.0
offset_bottom = 157.0
grow_horizontal = 2
texture = ExtResource("2_6y3xj")
expand_mode = 1

[node name="level1" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -203.0
offset_right = 843.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_8l7ta")

[node name="level2" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -102.0
offset_right = 841.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_oqde7")

[node name="choose_level_bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_x0mif")

[connection signal="pressed" from="level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="level2" to="." method="_on_level_2_pressed"]
